@@ -1,3 +1,4 @@
+2313 [OneClick] fixed using wrong chapters file if using an intermediate MKV file with VOB input
 2312 [OneClick] avoid muxing into intermediate MKV file if this is not necessary
 2311 [OneClick] not correctly extracted subtitle files will be ignored. Bug #710
 2310 [OneClick] fixed AVS audio processing. Bug #711
